[package]
name = "aabel-identifier-rs"
version = "0.1.1"
edition = "2021"
authors = ["Vlad Eminovici"]
description = "A crate the defines identifier behavior, such comparing them, or generating sequences of identifiers."
homepage = "https://github.com/veminovici/aabel-identifier-rs"
repository = "https://github.com/veminovici/aabel-identifier-rs"
license = "MIT OR Apache-2.0"
keywords = ["identifier", "iterator"]
categories = ["utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
